# ct-preprocessing-drr

./: .gitignore  CLAUDE.md  LICENSE  README.md  artifact_correction.py  crosstalk_mask.py  denoising.py  detector_model.py  detector_physics.py  detector_simulator.py  detector_tests.py  detector_validation.py  dicom_loader.py  example_detector_usage.py  hu_calibration.py  material_attenuation_lut.py  material_segmentation.py  materials_db.py  metal_compute_pipeline.py  polyenergetic_conversion.py  preprocess.py  pyproject.toml  quality_control.py  ray_projection_types.py  ray_projector.py  resampling.py  scratchpad.md  super_resolution.py
research/: hu_to_mu_coefficient.md  preprocess_CT.md  ray_projection.md  stacked_plate.md  stereo_geometry_config.md  stereo_rectification.md
shaders/: joseph_projector.metal
