[project]
name = "drr-luck"
version = "0.1.0"
description = "CT preprocessing pipeline for high-fidelity DRR synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "SimpleITK>=2.3.0",
    "pydicom>=2.4.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "scikit-image>=0.22.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.9.0",
    "pandas>=2.1.0",
    "rich>=13.7.0",
    "nibabel>=5.3.2",
    "pyobjc-framework-metal>=11.1",
    "pyobjc-framework-metalkit>=11.1",
    "pyobjc-framework-cocoa>=11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
